<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChamberActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/chamber_activity_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/floodable_volume"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/floodVolEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/bibs_installed"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Spinner
        android:id="@+id/egsFloodVolET"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:background="@drawable/spinner_background"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="@+id/floodVolEditText"
        app:layout_constraintStart_toStartOf="@+id/floodVolEditText"
        app:layout_constraintTop_toBottomOf="@+id/floodVolEditText" />

    <CheckBox
        android:id="@+id/bibsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Yes"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/numTendersEditText"
        app:layout_constraintStart_toStartOf="@+id/numTendersEditText" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/num_patients"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/numPatientsEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/num_tenders"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/numTendersEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/treatment_table"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/treatTableSpinner"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/spinner_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/blue_button_shape"
        android:elevation="10dp"
        android:onClick="onClick"
        android:padding="20dp"
        android:text="@string/button_calculate"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/air_scf"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalAirTextView"
        app:layout_constraintEnd_toStartOf="@+id/totalAirTextView" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/o2_scf"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalO2TextView"
        app:layout_constraintEnd_toStartOf="@+id/totalO2TextView" />

    <TextView
        android:id="@+id/totalAirTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bibsCheckBox" />

    <TextView
        android:id="@+id/totalO2TextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAirTextView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/innerRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/inner_lock_toggle_button"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/outerRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outer_lock_toggle_button"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/bothRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both_toggle_button"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>