<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SsdsEgsFragment">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bottom_depth"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/egsBottomDepthET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"
        tools:labelFor="@id/egsBottomDepthET"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_to_stage"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <EditText
        android:id="@+id/timeToStageET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"
        tools:labelFor="@id/timeToStageET"/>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/depth_first_stop"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <EditText
        android:id="@+id/depthFirstStopET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"
        tools:labelFor="@id/depthFirstStopET"/>

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/floodable_volume"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <EditText
        android:id="@+id/egsFloodVolET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView42"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"
        tools:labelFor="@id/egsFloodVolET"/>

    <Spinner
        android:id="@+id/egsFloodVolSpinner"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:background="@drawable/spinner_background"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/egsFloodVolET"
        app:layout_constraintTop_toBottomOf="@+id/egsFloodVolET" />

    <Button
        android:id="@+id/egsCalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/blue_button_shape"
        android:elevation="10dp"
        android:onClick="onClickEgs"
        android:padding="20dp"
        android:text="@string/button_calculate"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egsFloodVolSpinner" />

    <TextView
        android:id="@+id/minPsiTV"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView44"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/min_egs_psi"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="@+id/egsFloodVolSpinner"
        app:layout_constraintStart_toStartOf="@+id/egsFloodVolSpinner"
        app:layout_constraintTop_toBottomOf="@+id/egsFloodVolSpinner" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/first_stage_overbottom"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <EditText
        android:id="@+id/overBottomET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/default_mmp_psi"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no"
        tools:ignore="Autofill"
        tools:labelFor="@id/overBottomET"/>
</androidx.constraintlayout.widget.ConstraintLayout>