<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScubaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/duration_air_supply"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/depth"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/depthEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:tag="0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/cylPressureEditText"
        app:layout_constraintStart_toStartOf="@+id/cylPressureEditText"
        tools:ignore="Autofill"
        tools:labelFor="@id/depthEditText"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/cylinder_pressure"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/cylPressureEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:tag="1"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/minCylPressureEditText"
        app:layout_constraintStart_toStartOf="@+id/minCylPressureEditText"
        tools:ignore="Autofill"
        tools:labelFor="@id/cylPressureEditText"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center|start"
        android:text="@string/minimum_cylinder_pressure"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/minCylPressureEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:tag="2"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"
        tools:labelFor="@id/minCylPressureEditText"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/floodable_volume"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/floodVolEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:tag="3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/minCylPressureEditText"
        app:layout_constraintStart_toStartOf="@+id/minCylPressureEditText"
        tools:ignore="Autofill"
        tools:labelFor="@id/floodVolEditText"/>

    <Spinner
        android:id="@+id/egsFloodVolET"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:background="@drawable/spinner_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/floodVolEditText"
        app:layout_constraintStart_toStartOf="@+id/floodVolEditText"
        app:layout_constraintTop_toBottomOf="@+id/floodVolEditText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/number_of_flasks"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egsFloodVolET" />

    <EditText
        android:id="@+id/numFlasksEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:tag="4"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/floodVolEditText"
        app:layout_constraintStart_toStartOf="@+id/floodVolEditText"
        tools:ignore="Autofill"
        tools:labelFor="@id/numFlasksEditText"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/blue_button_shape"
        android:elevation="10dp"
        android:onClick="onClickScuba"
        android:padding="20dp"
        android:text="@string/button_calculate"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/duration_minutes"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toTopOf="@+id/durationTextView"
        app:layout_constraintEnd_toEndOf="@+id/durationTextView"
        app:layout_constraintStart_toStartOf="@+id/durationTextView" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="@+id/numFlasksEditText"
        app:layout_constraintStart_toStartOf="@+id/numFlasksEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>